--- a/DE-Visualization/templates/index.html
+++ b/DE-Visualization/templates/index.html
@@ -24,7 +24,7 @@
         }
 
         #note{
-            margin-top: 500px;
+            margin-top: 1500px;
         }
     </style>
 </head>
@@ -38,12 +38,15 @@
             <h2> The main thing !</h2>
 
             <img src="/plot.png">
+            <!-- <img src="/plot_rt.png">
+            <img src="/plot_it.png"> -->
 
-            <h2>Squeeze factor (r): {{rv}}</h2>
-            <h2>System Frequency (W): {{Wv}}</h2>
-            <h2>System Decay Rate (g): {{gv}}</h2>
-            <h2>Coupling factor (G): {{Gv}}</h2>
-            <h2>State Frequency (w): {{wv}}</h2>
+
+            <h2>Squeeze factor (r): {{r}}</h2>
+            <h2>Central Environment Frequency (&Omega;): {{W}}</h2>
+            <h2>Environment Decay Rate (&gamma;): {{g}}</h2>
+            <h2>Coupling factor (&Gamma;): {{G}}</h2>
+            <h2>System Frequency (&omega;): {{w}}</h2>
             <h2>Function show: {{func_i}}</h2>
         </div>
 
@@ -51,60 +54,37 @@
         <div class="content">
             <form method="post" action="{{url_for('update')}}">
                 <div>
-                    <label for="g"> Small gamma value (g) [0-99]</label>
-                    <input type="range" min="0" max="99" value={{g}} name="g" id="g"></input>
-                    <h5>Set at {{g}} | New value: </h5>
-                    <p id='gnew'>{{g}}</p>
-                    <br>
-                </div>
-
-                <div>
-                    <label for="W">Small omega value (w) [0-99]</label>
-                    <input type="range" min="0" max="99" value={{W}} name="W" id="W"></input>
-                    <h5>Set at {{W}} | New value: </h5>
-                    <p>{{W}}</p>
-                    <br>
-                </div>
-                
-
-                <div>
-                    <label for="r">r value [0-99] </label>
-                    <input type="range" min="0" max="99" value={{r}} name="r" id="r"></input>
-                    <h5>Set at {{r}}</h5>
-                    <h5>Set at {{r}} | New value: </h5>
-                    <p id="rnew">{{r}}</p>
-                    <br>
-                </div>
-
-                <div>
-                    <label for="G">Big gamma value (G) [0-99] </label>
-                    <input type="range" min="0" max="99" value={{G}} name="G" id="G"></input>
-                    <h5>Set at {{G}}</h5>
-                    <h5>Set at {{G}} | New value: </h5>
-                    <p id="Gnew">{{G}}</p>
-                    <br>
-                </div>
-
-                <div>
-                    <label for="w">Small omega value (w) [0-99] </label>
-                    <input type="range" min="0" max="99" value={{w}} name="w" id="w"></input>
-                    <h5>Set at {{w}}</h5>
-                    <h5>Set at {{w}} | New value: </h5>
-                    <p id="wnew">{{w}}</p>
-                    <br>
+                    <label for="g">Environment Decay rate (&gamma;)</label>
+                    <input type="text" id="g" name ="g" value={{g}}>
                 </div>
                 <div>
-                    <label for="'tmin">Min time value (must be less than max)</label>
+                    <label for="W">Central Environment Frequency (&Omega;)</label>
+                    <input type="text" id="W" name ="W" value={{W}}>
+                </div>
+                <div>
+                    <label for="r">Squeeze factor (r)</label>
+                    <input type="text" id="r" name ="r" value={{r}}>
+                </div>
+                <div>
+                    <label for="G">Coupling factor (&Gamma;)</label>
+                    <input type="text" id="G" name ="G" value={{G}}>
+                </div>
+                <div>
+                    <label for="w">System Frequency (&omega;)</label>
+                    <input type="text" id="w" name ="w" value={{w}}>
+                </div>
+                <div>
+                    <label for="tmin">Min time value (must be less than max)</label>
                     <input type="text" name="tmin" id="tmin" value = {{tmin}}>
-                    <label for="'tmin">Max time value (must be greater than min)</label>
+                    <label for="tmin">Max time value (must be greater than min)</label>
                     <input type="text" name="tmax" id="tmax" value = {{tmax}} >
                     <label for="steps">Number of steps between range (100 - 10000)</label>
                     <input type="text" name="trang" id="trang" value={{steps}} >
                     <br>
                 </div>
                 <div>
-                    <label for="func_i">Function index value [0-7] </label>
-                    <input type="range" min="0" max="7" value={{func_i}} name="func_i" id="func_i"></input>
+                    <label for="func_i">Function index value [0-15] </label>
+                    <input type="range" min="0" max="15" value={{func_i}} name="func_i" id="func_i"></input>
                     <h5>Set at {{func_i}}</h5>
                     <h5>Set at {{func_i}} | New value: </h5>
                     <p id="func_inew">{{func_i}}</p>
@@ -117,12 +97,15 @@
             </form>
         </div>
     </div>
+    
+    
+    
+    <h2>&part;<sub>t</sub>F<sup>&alpha;</sup><sub>z1</sub></h2>
     <h1 id='note'>NOTE FROM DEV: Due to the youth of this site, many feautures many be janky, if you see that your new graph query does not update try querying for it again! You may have querried before your changes could be fully loaded, or other small issues. Make sure to vocalize any issues ran into!</h1>
     <script type="text/javascript">
         let inputs = document.querySelectorAll('input')
 
         const update_val = (id) => {
-            console.log(id)
             let rangeObj = document.getElementById(id);
             let val = parseInt(rangeObj.value);
             let ref = document.getElementById(id + "new");
@@ -131,30 +114,30 @@
 
 
 
-        document.getElementById('g').oninput = (e) => {
-            e.preventDefault();
-            update_val('g');
-        }
-        document.getElementById('w').oninput = (e) => {
-            e.preventDefault();
-            update_val('w');
-        }
-        document.getElementById('r').oninput = (e) => {
-            e.preventDefault();
-            update_val('r');
-        }
+        // document.getElementById('g').oninput = (e) => {
+        //     e.preventDefault();
+        //     update_val('g');
+        // }
+        // document.getElementById('w').oninput = (e) => {
+        //     e.preventDefault();
+        //     update_val('w');
+        // }
+        // document.getElementById('r').oninput = (e) => {
+        //     e.preventDefault();
+        //     update_val('r');
+        // }
         document.getElementById('func_i').oninput = (e) => {
             e.preventDefault();
             update_val('func_i');
         }
-        document.getElementById('W').oninput = (e) => {
-            e.preventDefault();
-            update_val('W');
-        }
-        document.getElementById('G').oninput = (e) => {
-            e.preventDefault();
-            update_val('G');
-        }
+        // document.getElementById('W').oninput = (e) => {
+        //     e.preventDefault();
+        //     update_val('W');
+        // }
+        // document.getElementById('G').oninput = (e) => {
+        //     e.preventDefault();
+        //     update_val('G');
+        // }
 
 
 
